--- a/.github/workflows/ktlint.yml
+++ b/.github/workflows/ktlint.yml
@@ -19,5 +19,5 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
 
-      - name: Execute Gradle build
+      - name: Execute ktlint
         run: ./gradlew ktlintCheck
