--- a/.github/workflows/deploy-openapi.yml
+++ b/.github/workflows/deploy-openapi.yml
@@ -16,7 +16,7 @@ jobs:
   deploy-to-github-pages:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Install swagger-cli
         run: |
@@ -24,7 +24,7 @@ jobs:
 
       - name: Validate Swagger Files
         run: |
-          swagger-cli validate -d ${{ github.workspace }}/openapi.yaml --type yaml
+          swagger-cli validate -d openapi.yaml --type yaml
 
       - name: Generate Swagger UI
         if: github.event.pull_request.merged == true
