--- a/.github/workflows/tbls.yml
+++ b/.github/workflows/tbls.yml
@@ -23,8 +23,10 @@ jobs:
           --health-timeout 5s
           --health-retries 5
     steps:
-      - name: Checkout .tbls.yml
+      - name: Checkout
         uses: actions/checkout@v3
+        with:
+          ref: ${{ github.ref_name }}
       - uses: actions/setup-java@v3
         with:
           distribution: temurin
