--- a/.github/workflows/tbls.yml
+++ b/.github/workflows/tbls.yml
@@ -1,8 +1,6 @@
 name: ER Diagram (tbls)
 
 on:
-  push:
-    branches: [ main ]
   pull_request:
     branches: [ main ]
 
@@ -26,7 +24,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          ref: ${{ github.ref_name }}
+          ref: ${{ github.event.pull_request.head.sha }}
       - uses: actions/setup-java@v3
         with:
           distribution: temurin
