--- a/.github/workflows/tbls.yml
+++ b/.github/workflows/tbls.yml
@@ -55,5 +55,5 @@ jobs:
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
           git add dbdoc
           git commit --author=. -m 'docs: update er diagram'
-          git push
+          git push origin HEAD:${{ github.event.pull_request.head.ref }}
         if: steps.diff.outcome == 'failure'
